contrast fix

--- a/src/assets/scss/_comments.scss
+++ b/src/assets/scss/_comments.scss
@@ -32,7 +32,7 @@
   }
   &-markdown {
     a {
-      color: #0ecbfa;
+      color: $link-color;
       text-decoration: none;
       font-style: normal;
     }
