--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -9,7 +9,8 @@ $bg-light: #fefefe;
 $bg-light-grey: #d8d8d8;
 $bg-dark-primary: #111;
 $bg-dark-secondary: #272729;
-$bg-dark-grey: #444; // Global Resets
+$bg-dark-grey: #444;
+$link-color: #0044ff; // Global Resets
 * {
   box-sizing: border-box;
   margin: 0;
