--- a/src/assets/scss/_trendingSubs.scss
+++ b/src/assets/scss/_trendingSubs.scss
@@ -39,6 +39,6 @@
   font-size: 1.8rem;
   padding: 1.5rem 2rem;
   a {
-    color: #0ecbfa;
+    color: $link-color;
   }
 }
